k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: luxe-backend
  namespace: demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: luxe-backend
  template:
    metadata:
      labels:
        app: luxe-backend
    spec:
      imagePullSecrets:
      - name: docker-hub-creds
      containers:
      - name: luxe-backend
        image: israelatia/luxe-jewelry-store-backend:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
