k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: luxe-frontend
  namespace: demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: luxe-frontend
  template:
    metadata:
      labels:
        app: luxe-frontend
    spec:
      imagePullSecrets:
      - name: ecr-credentials
      containers:
      - name: luxe-frontend
        image: 992398098051.dkr.ecr.us-east-1.amazonaws.com/student-eks-cluster:frontend-latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
