k8s/jenkins-agent-template.yaml
apiVersion: v1
kind: Pod
metadata:
  name: luxe-agent-template        # must have a name
  namespace: app
  labels:
    jenkins/label: "luxe-agent"
spec:
  serviceAccountName: jenkins
  containers:
    - name: jnlp
      image: jenkins/inbound-agent:latest
      args: ['$(JENKINS_SECRET)', '$(JENKINS_AGENT_NAME)']
      tty: true
      volumeMounts:
        - name: workspace-volume
          mountPath: /home/jenkins/agent

    - name: jenkins-agent
      image: israelatia/jenkins-agent:latest
      command: ['cat']
      tty: true
      volumeMounts:
        - name: workspace-volume
          mountPath: /home/jenkins/agent

  volumes:
    - name: workspace-volume
      emptyDir: {}
